e2e/tests/snapshots/test_snm_list/e2e__test_snm_list_3.snap
---
source: e2e/src/lib.rs
expression: "dedent(&format!(r#\"\n                        is: {}\n                        os: {}\n                        \"#,\n            command, res))"
snapshot_kind: text
---
is: snm node default 20.0.0
os: 🎉 Node v20.0.0 is now default
