e2e/tests/snapshots/test_snm_list/e2e__test_snm_list_4.snap
---
source: e2e/src/lib.rs
expression: "dedent(&format!(r#\"\n                        is: {}\n                        os: {}\n                        \"#,\n            command, res))"
snapshot_kind: text
---
is: snm node list
os: -> 20.0.0       npm 9.6.4            openssl 3.0.8+quic   died on 2026-04-30     Iron
