e2e/tests/snapshots/test_snm_list/e2e__test_snm_list_5.snap
---
source: e2e/src/lib.rs
expression: "dedent(&format!(r#\"\n                        is: {}\n                        os: {}\n                        \"#,\n            command, res))"
snapshot_kind: text
---
is: snm node list --compact
os: -> 20.0.0
